feat: update package DAO